# flight-recorder-core

./: .editorconfig  .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  GEMINI.md  LICENSE  PROGRESS.md  README.md  SECURITY.md  SPEC.md  docker-compose.yml  package.json
.github/workflows/: backend.yml  ui.yml
backend/: Dockerfile  package-lock.json  package.json
backend/src/: db.ts  index.ts
backend/src/__tests__/: api.test.ts
examples/: simple_agent.py
sdks/python/: pyproject.toml
sdks/python/agent_flight_recorder/: __init__.py
sdks/python/tests/: test_sdk.py
sdks/typescript/: package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: index.ts
sdks/typescript/src/__tests__/: sdk.test.ts
ui/: package-lock.json  package.json
ui/src/app/: layout.tsx  page.tsx
ui/src/app/diff/: page.tsx
ui/src/app/runs/[id]/: page.tsx
ui/src/lib/: api.ts
