[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-flight-recorder"
version = "1.0.0"
description = "Python SDK for Agent Flight Recorder"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "responses",
]
